Created inbox post/get endpoints, started work on /inbox POST controller
