# server/api/controllers/user/controller.ts
@@ -6,7 +6,6 @@ export class Controller {
   getResource(req: Request, res: Response): void {
     const resource = req.params.preferredUsername;
 
-    // TODO: add more advanced resource query validation using a library e.g. express-validator
     if (!resource) {
       res.status(400).send('Missing username');
     } else {
@@ -15,5 +14,19 @@ export class Controller {
       });
     }
   }
+
+  postInbox(req: Request, res: Response): void {
+    const actorUsername = req.params.preferredUsername;
+
+    // TODO: validate http signature, date, check attributedto and who it's from are the same
+    if (!actorUsername) {
+      res.status(400).send('Missing username');
+    } else {
+      UserService.addObject(actorUsername).then(r => {
+      //  res.status(201).end();
+      });
+    }
+  }
+
 }
 export default new Controller();
