# server/api/controllers/user/router.ts
@@ -2,3 +2,4 @@ import * as express from 'express';
 import controller from './controller'
 export default express.Router()
     .get('/:preferredUsername', controller.getResource)
+    .post('/:preferredUsername/inbox', controller.postInbox);
